--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,6 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: stm_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/stm_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/stm/stm_{{ version }}.tar.gz
@@ -15,9 +14,8 @@ source:
 
 build:
   merge_build_host: True  # [win]
-  number: 0
+  number: 1
   skip: true  # [win]
-
   rpaths:
     - lib/R/lib/
     - lib/
@@ -29,9 +27,9 @@ requirements:
     - {{native}}toolchain        # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
-    - {{posix}}sed  # [win]
-    - {{posix}}coreutils  # [win]
-
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-matrix
@@ -45,7 +43,6 @@ requirements:
     - r-quanteda
     - r-slam
     - r-stringr
-
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
@@ -77,9 +74,27 @@ about:
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
+    - conda-forge/r
     - stevierene82
+
+# Package: stm
+# Type: Package
+# Title: Estimation of the Structural Topic Model
+# Version: 1.3.3
+# Date: 2018-1-26
+# Author: Margaret Roberts [aut, cre],  Brandon Stewart [aut, cre], Dustin Tingley [aut, cre], Kenneth Benoit [ctb]
+# Maintainer: Brandon Stewart <bms4@princeton.edu>
+# Depends: R (>= 3.2.2)
+# LinkingTo: Rcpp, RcppArmadillo
+# Imports: matrixStats, splines, slam, lda, quanteda, stringr, Matrix, glmnet, Rcpp (>= 0.11.3), grDevices, graphics, stats, utils, data.table, quadprog, parallel, methods
+# Suggests: igraph, SnowballC, tm (>= 0.6), huge, clue, wordcloud, KernSmooth, NLP, LDAvis, geometry, Rtsne, testthat, rsvd
+# LazyData: yes
+# Description: The Structural Topic Model (STM) allows researchers  to estimate topic models with document-level covariates.  The package also includes tools for model selection, visualization, and estimation of topic-covariate regressions. Methods developed in Roberts et al (2014) <doi:10.1111/ajps.12103> and  Roberts et al (2016) <doi:10.1080/01621459.2016.1141684>.
+# License: MIT + file LICENSE
+# URL: http://structuraltopicmodel.com
+# BugReports: https://github.com/bstewart/stm/issues
+# RoxygenNote: 6.0.1
+# NeedsCompilation: yes
+# Packaged: 2018-01-28 18:42:14 UTC; bms4
+# Repository: CRAN
+# Date/Publication: 2018-01-28 21:13:01 UTC
